
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_char ;
struct sockaddr_in {int sin_port; int sin_family; int sin_addr; } ;
struct sockaddr {int dummy; } ;
struct hostent {int h_length; int h_addr; } ;
typedef int address ;


 int AF_INET ;
 int EXIT_FAILURE ;
 int SOCK_STREAM ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 int fflush (int ) ;
 struct hostent* gethostbyname (int *) ;
 int htons (int) ;
 int memcpy (char*,int ,int ) ;
 int memset (struct sockaddr_in*,int ,int) ;
 int perror (char*) ;
 int socket (int ,int ,int ) ;
 int stdout ;

__attribute__((used)) static int
sockami (u_char * host, int port)
{
  struct sockaddr_in address;
  struct hostent *hp;
  int sock;

  fflush (stdout);
  if ((sock = socket (AF_INET, SOCK_STREAM, 0)) == -1)
    {
      perror ("socket()");
      exit (-1);
    }

  if ((hp = gethostbyname (host)) == ((void*)0))
    {
      perror ("gethostbyname()");
      exit (-1);
    }

  memset (&address, 0, sizeof (address));
  memcpy ((char *) &address.sin_addr, hp->h_addr, hp->h_length);
  address.sin_family = AF_INET;
  address.sin_port = htons (port);

  if (connect (sock, (struct sockaddr *) &address, sizeof (address)) == -1)
    {
      perror ("connect()");
      exit (EXIT_FAILURE);
    }

  return (sock);
}
